fix(engine): Quick fix with list copy to avoir concurrent modification exception...