@@ -15,6 +15,7 @@ import static java.util.concurrent.TimeUnit.MILLISECONDS;
 import static java.util.concurrent.TimeUnit.SECONDS;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.awaitility.Awaitility.await;
+import static org.junit.jupiter.api.Assertions.fail;
 import static org.mockito.Mockito.mock;
 
 import com.chutneytesting.action.spi.injectable.Target;
@@ -32,6 +33,9 @@ import com.chutneytesting.engine.domain.execution.report.StepExecutionReport;
 import io.reactivex.rxjava3.observers.TestObserver;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+import java.util.stream.Collectors;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
@@ -50,6 +54,36 @@ public class ReporterTest {
         sut = new Reporter();
         scenarioExecution = ScenarioExecution.createScenarioExecution(null);
     }
+
+    @Test
+    void testConcurrentModificationOnSubSteps() throws Exception {
+        ExecutorService executor = Executors.newFixedThreadPool(2);
+        try {
+            Runnable getter = () -> {
+                try {
+                    while (!Thread.currentThread().isInterrupted()) {
+                        step.removeStepExecution();
+                        step.addStepExecution(buildFakeScenario());
+                        MILLISECONDS.sleep(5);
+                    }
+                } catch (Exception e) {
+                   // should not happen
+                }
+            };
+
+            executor.submit(getter);
+            long startTime = System.currentTimeMillis();
+            while (System.currentTimeMillis() - startTime < 500) {
+                StepExecutionReport report = sut.generateReport(step, Step::status, "env");
+                if (Status.FAILURE.equals(report.status)) {
+                    fail();
+                }
+            }
+        } finally {
+            executor.shutdownNow();
+        }
+    }
+
 
     @Test
     public void parent_status_should_be_recalculate() {
@@ -197,7 +231,7 @@ public class ReporterTest {
     }
 
     private Step buildStep(StepDefinition definition) {
-        final List<Step> steps = definition.steps.stream().map(this::buildStep).toList();
+        final List<Step> steps = definition.steps.stream().map(this::buildStep).collect(Collectors.toList());
         return new Step(dataEvaluator, definition, null, steps);
     }
 
